# audio-extractor

./: .gitignore  CLAUDE.md  Extract Audio Sample.ipynb  README.md  pyproject.toml  requirements.txt
.claude/commands/: review.md
src/: audio_extractor.py  audio_normalizer.py  audio_tagger.py  constants.py  extract_audios_from_dir.py  files_processor.py  normalize_audios_from_dir.py  process_class.py  tag_audios_from_dir.py  utils.py
tests/: conftest.py  test_audio_extractor.py  test_audio_normalizer.py  test_audio_tagger.py  test_files_processor.py  test_process_class.py  test_utils.py
