[project]
name = "audio-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "eyed3>=0.9.8",
    "moviepy==1.0.3",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
