[project]
name = "audio-extractor"
version = "0.1.0"
description = "Extract, normalize, and tag audio from video files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "eyed3>=0.9.8",
    "moviepy>=2.0.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
