[project]
name = "audio-extractor"
version = "0.1.0"
description = "Extract, normalize, and tag audio from video files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "eyed3>=0.9.8",
    "moviepy>=2.0.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.10",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = [
    "audio_extractor",
    "audio_normalizer",
    "audio_tagger",
    "constants",
    "files_processor",
    "process_class",
    "utils",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
